# rlhf-training-pipeline

./: .gitignore  README.md  prd-rlhf-training-pipeline.docx  pyproject.toml
configs/deepspeed/: zero3.json
configs/jobs/: ppo.yaml  reward.yaml  sft.yaml
docs/: architecture.md  model_card_template.md
frontend/: next-env.d.ts  package.json
frontend/src/app/: layout.tsx  page.tsx  styles.css
rlhf_pipeline/: __init__.py  cli.py  schemas.py
rlhf_pipeline/api/: __init__.py  database.py  main.py
rlhf_pipeline/curation/: __init__.py  dedupe.py  diversity.py  normalize.py  pipeline.py  toxicity.py
rlhf_pipeline/eval/: __init__.py  metrics.py
rlhf_pipeline/orchestrator/: __init__.py  jobs.py
rlhf_pipeline/storage/: __init__.py  registry.py
rlhf_pipeline/training/: __init__.py  configs.py  ppo.py  reward.py  sft.py
sample_data/: raw_instructions.jsonl
scripts/: train_ppo.py  train_reward.py  train_sft.py
tests/: test_annotation_store.py  test_curation.py  test_eval_metrics.py  test_orchestrator_storage.py  test_ppo.py  test_reward.py
